--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #1f2937;
+    padding-bottom: 100px;
     color: #f9faf8;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -26,7 +27,7 @@ ul {
 }
 
 li {
-    margin-left: 8px;
+    margin-left: 24px;
     font-size: 18px;
     color: #e5e7eb;
 }
@@ -49,6 +50,7 @@ li {
 .left-container {
     display: flex;
     flex-direction: column;
+    
 }
 
 
@@ -64,6 +66,8 @@ li {
 
 .title-subtext {
     font-size: 18px;
+    font-weight: 200;
+    margin-bottom: 20px;
     color: #e5e7eb;
 }
 
@@ -72,4 +76,132 @@ li {
     height: 250px;
     background-color: lightgray;
     margin-bottom: 32px;
+    margin-left: 32px;
+}
+
+button {
+    background-color: #3882f6;
+    color: white;
+    border: 0px;
+    width: 150px;
+    padding: 10px;
+    border-radius: 12.5px;
+}
+
+.page-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.body-title {
+    font-size: 36px;
+    font-weight: 800;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    margin: 50px 0;
+}
+
+.grid-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
+
+}
+
+.grid-image {
+    height: 150px;
+    width: 150px;
+    background-color: white;
+    border: 5px solid;
+    border-color: #3882f6;
+    border-radius: 15px;
+    margin: 15px 0;
+}
+
+.grid-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 25px;
+}
+
+.image-text {
+    text-align: center;
+    color: #666f82;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.quote-container {
+    padding: 100px 240px;
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.quote-author {
+    text-align: right;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.body-3 {
+    display: flex;
+    box-sizing: border-box;
+    width: 100%;
+    justify-content: center;
+}
+
+.blue-container {
+    display: flex;
+    margin: 100px 20px;
+    padding: 20px;
+    background-color: #3882f6;
+    display: flex;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.action-text {
+    display: flex;
+    flex-direction: column;
+    color: #f9faf8;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.action-title {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    padding: 5px
+}
+
+.action-subtitle {
+    padding: 5px;
+}
+
+.action-signup {
+    border: 2px solid white;
+    color: white;
+    font-weight: 800;
+    height: 40px;
+    margin:0 50px
+}
+
+.footer {
+    background-color: #1f2937;
+    height: 100px;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
